# RoboticsAndAutonomousSystems_Assignment2

./: .gitignore  README.md
src/: setup.py
src/ur3_description/: CMakeLists.txt  package.xml  setup.py
src/ur3_description/config/: ur3_controllers.yaml
src/ur3_description/launch/: ur3_gazebo.launch.py  ur3_rviz.launch.py
src/ur3_description/urdf/: ur3.gazebo.xacro  ur3.ros2_control.xacro  ur3.urdf.xacro
src/ur3_description_2/: CMakeLists.txt  package.xml
src/ur3_description_2/launch/: ur3_rviz.launch.py
src/ur3_move/: CMakeLists.txt  package.xml
src/ur3_move/launch/: userCommandNode.launch.py
src/ur3_move/src/: UR3MoveActionClient.py  UR3MoveNode.py  UR3RLEnvironment.py  userCommandNode.py  userInputNode.py
